<resources>
    <string name="app_name">IUP</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="logo">Logo</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="kennitala">Kennitala</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_description">Event Description</string>
    <string name="position">Position</string>
    <string name="date_end">Date End</string>
    <string name="date_start">Date Start</string>
    <string name="maximum_people">Maximum people</string>
    <string name="event_name">Event Name</string>
    <string name="click_below_to_add_a_photo">Click below to add a photo!</string>
    <string name="name">name</string>
    <string name="biography">Biography</string>
    <string name="change_image">Change Image</string>
    <string name="name_profile">Name</string>
    <string name="create_one"><u>Create one!</u></string>
    <string name="partecipants">Partecipants:</string>
    <string name="fantastic_event">Fantastic Event</string>
    <string name="you_don_t_seem_to_have_organized_any_events_what_are_you_waiting_for">You don\'t seem to have organized any events. What are you waiting for?</string>
    <string name="_1_6">1.6</string>
    <string name="km">km</string>
    <string name="max_people">Max People:</string>
    <string name="_10">10</string>
    <string name="_2">2</string>
    <string name="slash">/</string>
    <string name="giacomo_menchi"><b>Giacomo Menchi</b></string>
    <string name="Description_G">He has a bachelor’s degree in Computer Science, obtained cum Laude at University of Camerino in July 2019. He is specialized in embedded systems, desktop and backend development, but tries to study everything that comes to his attention and thus has seen a little bit of everything and can manage in most situations. He will coordinate the development by attempting to solve incompatibilities between frontend and backend and aiding both in creating cohesion.</string>
    <string name="matteo_belenchia"><b>Matteo Belenchia</b></string>
    <string name="Description_MB">He is an exchange student from the University of Camerino specializing in Intelligent and Adaptive Systems. He has experience in distributed and parallel systems modelling, using frameworks such as Uppaal, jSpin, Concurrency Workbench and Repast Simphony. He will be mainly concerned with system design and communication protocols between components.</string>
    <string name="matteo_guerrini"><b>Matteo Guerrini</b></string>
    <string name="Description_MG">He is a student of the University of Camerino specialized in Software and System for Industries, he finished the bachelor in 2019 of Computer Science. Usually, in the previous project he developed the backend with C# and Java, but this time he wants to start to learn the front end, so it will be the developer of frontend with Android Studio.</string>
    <string name="Description_W">William Paciaroni has a bachelor’s degree in Computer Science at University of Camerino. He is attending a Master of Computer Science with specialization in Systems and Software for Industries at University of Camerino. He has some previous experiences in developing front end using Angular and some mobile experiences where he used Ionic Native to build Hybrid App also thanks to the use of Cordova and Capacitor. In this project he chose to work on the back end, which will be developed using C# and ASP.Net Core.</string>
    <string name="william_paciaroni"><b>William Paciaroni</b></string>
    <string name="birthday">Birthday</string>
    <string name="surname">Surname</string>
</resources>