<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".CreateEventActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/footbar_gradient"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="left"
            android:background="@drawable/back_arrow"/>

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:background="@drawable/ic_baseline_settings_24" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/iup_little_logo" />

    </androidx.appcompat.widget.Toolbar>

    <ProgressBar
        android:id="@+id/LoadingLogin"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textView11"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/click_below_to_add_a_photo" />

        <ImageView
            android:id="@+id/displayImageView"
            android:layout_width="310dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_insert_photo_48"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView1"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/event_name" />

        <EditText
            android:id="@+id/txtName"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/maximum_people" />

        <EditText
            android:id="@+id/txtMaxPeople"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="number" />
        <TextView
            android:id="@+id/textView3"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/date_start" />

        <EditText
            android:id="@+id/txtDateStart"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="date" />
        <TextView
            android:id="@+id/textView4"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/date_end" />



        <EditText
            android:id="@+id/txtDateEnd"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="date" />


        <TextView
            android:id="@+id/textView5"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/position" />



        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtPosition"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:layout_gravity="right"
                tools:ignore="RtlCompat" />

            <ImageView
                android:id="@+id/btnPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="2dp"
                android:src="@android:drawable/ic_menu_search" />

        </LinearLayout>


        <TextView
            android:id="@+id/textView6"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/event_description" />

        <EditText
            android:id="@+id/txtDescription"
            android:layout_width="300dp"
            android:height="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnCreateEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/create_button"/>

    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>