<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    android:background="@drawable/background"
    android:layout_marginTop="50dp"
    android:layout_marginBottom="55dp">

    <ProgressBar
        android:id="@+id/ProfileLoading"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/txt1"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Click below to add/change photo" />

            <ImageView
                android:id="@+id/imgProfileChange"
                android:layout_width="310dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_account_vec"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt2"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Name" />

            <EditText
                android:id="@+id/txtProfileName"
                android:layout_width="200dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/surname" />

            <EditText
                android:id="@+id/txtProfileSurname"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView3"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/birthday" />
            <EditText
                android:id="@+id/txtProfileBirthday"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="date"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/biography" />

            <EditText
                android:id="@+id/txtProfileDescription"
                android:layout_width="300dp"
                android:height="300dp"
                android:scrollbars = "vertical"
                android:singleLine="false"
                android:layout_gravity="center"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:layout_height="wrap_content"/>

            <RatingBar
                android:id="@+id/ratingBarProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="0.5"
                />

            <Button
                android:id="@+id/btnSaveProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/save_button"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"/>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>